# local_rag

./: ARCHITECTURE.md  DESIGN.md  README.md  SKILLS.md  TASKS.md
local_rag/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  run.txt
local_rag/app/: main.py
local_rag/app/api/: routes_chat.py  routes_documents.py  routes_health.py
local_rag/app/core/: config.py  logging.py  prompts.py
local_rag/app/db/: vector_store_base.py  vector_store_lancedb.py
local_rag/app/models/: api_schemas.py  chat.py  chunk.py  document.py
local_rag/app/parsers/: markdown_parser.py  pdf_parser.py  txt_parser.py
local_rag/app/services/: document_service.py  embedding_service.py  ingestion_service.py  llm_service.py  retrieval_service.py
local_rag/scripts/: ingest_sample.py
